[project]
name = "lss-daily-discord-overview"
version = "2.2.0"
description = "Dieses Skript ruft Daten von Leitstellenspiel.de ab und sendet eine tägliche Übersicht zu Gebäude-Erweiterungen und Schulungen, die heute fertig werden, an einen Discord-Webhook."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apprise~=1.9.2",
    "beautifulsoup4~=4.13.3",
    "inquirer~=3.4.0",
    "python-dotenv~=1.1.0",
    "requests~=2.32.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]


[tool.bumpversion]
current_version = "2.2.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
tag_name = "v{new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
pre_commit_hooks = ["uv sync --upgrade", "git add uv.lock"]

[[tool.bumpversion.files]]
filename = "lss_daily_discord_overview.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
